<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DFood</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="picture">获取图片</string>
    <string name="refresh_setting">刷新</string>
    <string name="basePath">http://192.168.0.106:8080/test_ssh/</string>
    <string name="food_title">美食</string>
    <string name="user_name">发布者：</string>
    <string name="food_type">美食类型：</string>
    <string name="food_description">美食简介：</string>
    <string name="food_name">美食名字：</string>
    <string name="food_collect">收藏总数：</string>
    <string name="food_comment">美食评论：</string>
    <string name="u_name">用户名：</string>
    <string name="u_collect">我的收藏：</string>
    <string name="u_my_food">我的美食：</string>
    <string name="u_pwd">密码：</string>
    <string name="btn_login">登录</string>
    <string name="back_login">退出登录</string>
    <string name="zc">没有用户？点击注册</string>
    <string name="register">注册</string>
    <string name="add_to_schedule">关注</string>
    <string name="search_info">输入搜索内容....</string>
    <string name="btn_search">搜索</string>
    <string name="no_login">请先登录</string>
    <string name="f_name">食物名字：</string>
    <string name="f_d">食物简介：</string>
    <string name="f_btn">添加</string>
    <string name="get_comment">获取评论</string>
    <string name="basePath1">http://192.168.0.106:8080/</string>
</resources>
