<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/head"></include>

    <TextView
        android:id="@+id/no_login"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/no_login"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/f_image"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/button_material_light"
        android:layout_height="250dp" />

   <Spinner
       android:id="@+id/f_type"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/f_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/f_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/f_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/f_d"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/f_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_selector"
        android:padding="5dp"
        android:text="@string/f_btn"
        android:textSize="18sp" />
</LinearLayout>