<?xml version="1.0" encoding="utf-8"?>
  <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
<include layout="@layout/head"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <ImageView
            android:id="@+id/iv"
            android:layout_width="fill_parent"
            android:layout_height="265dp" />

    </FrameLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="30sp"
                    android:text="@string/food_name"/>

                <TextView
                    android:id="@+id/food_name"
                    android:layout_marginLeft="5dp"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="30sp"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_marginLeft="5dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="30sp"
            android:text="@string/food_type"/>

        <Button
            android:id="@+id/food_type"
            android:layout_marginLeft="5dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="30sp"
            android:text="@string/food_description"/>

        <TextView
            android:id="@+id/food_description"
            android:layout_marginLeft="5dp"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="30sp"
                    android:text="@string/food_collect"/>

                <TextView
                    android:id="@+id/food_collect"
                    android:layout_marginLeft="5dp"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
                <Button
                    android:id="@+id/get_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_comment"
                    android:background="@color/def_color"
                    />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_marginTop="280dp"
    android:gravity="right"
    android:layout_height="65dp">
        <include layout="@layout/include_add_schedule_fab"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true" />
</RelativeLayout>
</FrameLayout>