<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/head" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/input_text"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/u_name"
            android:textColor="@color/hei"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/u_name"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="text"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/hei"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/input_text"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/u_pwd"
            android:textColor="@color/hei"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/u_pwd"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/hei"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/user_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_selector"
        android:padding="5dp"
        android:text="@string/register"
        android:textSize="18sp" />
</LinearLayout>
</LinearLayout>